Create lib with common code
