# auth/handlers/auth.go
@@ -112,3 +112,29 @@ func (h *Auth) Confirm(w http.ResponseWriter, r *http.Request) {
 
 	render.Respond(w, r, resp)
 }
+
+// @Summary Updates role of the user
+// @Tags management
+// @Accept  json
+// @Produce  json
+// @Param req body modelapi.SetRole true "Request"
+// @Success 200 {object} modelapi.SetRole
+// @Router /v1/setrole [post]
+// @Security ApiKeyAuth
+func (h *Auth) SetRole(w http.ResponseWriter, r *http.Request) {
+	var data modelapi.SetRole
+	if err := render.Decode(r, &data); err != nil {
+		log.Println("failed to read request, err=", err)
+		render.Render(w, r, ErrInvalidRequest(err))
+		return
+	}
+
+	resp, err := h.auth.SetRole(data)
+	if err != nil {
+		log.Println("failed to refresh, err=", err)
+		render.Render(w, r, ErrInternal(err))
+		return
+	}
+
+	render.Respond(w, r, resp)
+}
