# auth/routers/router.go
@@ -3,6 +3,8 @@ package routers
 import (
 	"auth/handlers"
 	"fmt"
+	"lib/httputil"
+	"lib/pb"
 	"log"
 	"net/http"
 
@@ -16,7 +18,7 @@ import (
 	_ "auth/docs" // docs is generated by Swag CLI, you have to import it.
 )
 
-func CreateRouter(authV1 *handlers.Auth) chi.Router {
+func CreateRouter(authV1 *handlers.Auth, authCli pb.AuthClient) chi.Router {
 	r := chi.NewMux()
 
 	r.Use(middleware.RequestID)
@@ -28,6 +30,11 @@ func CreateRouter(authV1 *handlers.Auth) chi.Router {
 		r.Post("/signup", authV1.Signup)
 		r.Post("/signin", authV1.Signin)
 		r.Post("/refresh", authV1.Refresh)
+
+		r.
+			With(httputil.AuthMiddleware(authCli)).
+			With(httputil.RequireRole(pb.AuthRole_ADMIN)).
+			Post("/setrole", authV1.SetRole)
 
 		// not a rest, handles user confirmation links
 		r.Get("/confirm", authV1.Confirm)
