# product-import/routers/router.go
@@ -2,6 +2,8 @@ package routers
 
 import (
 	"fmt"
+	"lib/httputil"
+	"lib/pb"
 	"log"
 	"net/http"
 	"product-import/handlers"
@@ -13,7 +15,7 @@ import (
 	_ "product-import/docs" // docs is generated by Swag CLI, you have to import it.
 )
 
-func CreateRouter(imp *handlers.Import) chi.Router {
+func CreateRouter(imp *handlers.Import, authMiddleware func (http.Handler) http.Handler) chi.Router {
 	r := chi.NewMux()
 
 	r.Use(middleware.RequestID)
@@ -21,7 +23,8 @@ func CreateRouter(imp *handlers.Import) chi.Router {
 	r.Use(middleware.Recoverer)
 
 	r.Route("/v1", func(r chi.Router) {
-		r.Post("/import", imp.Import)
+		r.Use(authMiddleware)
+		r.With(httputil.RequireRole(pb.AuthRole_ADMIN)).Post("/import", imp.Import)
 	})
 
 	log.Println("Attached swagger ui at /swagger")
